force-app/main/default/objects/Benefits__x/Benefits__x.object-meta.xml
<CustomObject>
    <description>Benefits</description>
    <externalDataSource>Workday</externalDataSource>
    <externalName>Benefits</externalName>
    <label>Benefits</label>
    <pluralLabel>Benefits</pluralLabel>
</CustomObject>