force-app/main/default/objects/Benefits__x/fields/Benefit_plan__c.field-meta.xml
<CustomField>
    <fullName>Benefit_plan__c</fullName>
    <description>Benefit_plan</description>
    <externalDeveloperName>Benefit_plan</externalDeveloperName>
    <label>Benefit_plan</label>
    <length>128</length>
    <type>Text</type>
</CustomField>