force-app/main/default/objects/Benefits__x/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <description>Coverage</description>
    <externalDeveloperName>Coverage</externalDeveloperName>
    <label>Coverage</label>
    <length>128</length>
    <type>Text</type>
</CustomField>