force-app/main/default/objects/Benefits__x/fields/Enroll_dependents__c.field-meta.xml
<CustomField>
    <fullName>Enroll_dependents__c</fullName>
    <description>Enroll_dependents</description>
    <externalDeveloperName>Enroll_dependents</externalDeveloperName>
    <label>Enroll_dependents</label>
    <length>128</length>
    <type>Text</type>
</CustomField>