force-app/main/default/objects/Benefits__x/fields/Monthly_employee_cost__c.field-meta.xml
<CustomField>
    <fullName>Monthly_employee_cost__c</fullName>
    <description>Monthly_employee_cost</description>
    <externalDeveloperName>Monthly_employee_cost</externalDeveloperName>
    <label>Monthly_employee_cost</label>
    <length>128</length>
    <type>Text</type>
</CustomField>