force-app/main/default/objects/Benefits__x/fields/Submitted_on__c.field-meta.xml
<CustomField>
    <fullName>Submitted_on__c</fullName>
    <description>Submitted_on</description>
    <externalDeveloperName>Submitted_on</externalDeveloperName>
    <label>Submitted_on</label>
    <type>DateTime</type>
</CustomField>